gen/com/acc/datascript/lang/parser/DataScriptParser.java
// This is a generated file. Not intended for manual editing.
package com.acc.datascript.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.acc.datascript.lang.psi.DataScriptTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DataScriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALIAS_CLAUSE) {
      r = aliasClause(b, 0);
    }
    else if (t == ALL_DISTINCT) {
      r = allDistinct(b, 0);
    }
    else if (t == ALL_IN_GROUP_QUALIFIER) {
      r = allInGroupQualifier(b, 0);
    }
    else if (t == BATCH_FUNCTION) {
      r = batchFunction(b, 0);
    }
    else if (t == CALL_GENERATOR) {
      r = callGenerator(b, 0);
    }
    else if (t == CALLABLE_CARDINALITY) {
      r = callableCardinality(b, 0);
    }
    else if (t == CLASS_DEFINITION) {
      r = classDefinition(b, 0);
    }
    else if (t == CLASS_ELEMENT) {
      r = classElement(b, 0);
    }
    else if (t == COLUMN) {
      r = column(b, 0);
    }
    else if (t == CONNECT_BY_C_LAUSE) {
      r = connectByCLause(b, 0);
    }
    else if (t == CONNECTION) {
      r = connection(b, 0);
    }
    else if (t == DATA_TYPE) {
      r = dataType(b, 0);
    }
    else if (t == ENTITY_DEFINITION) {
      r = entityDefinition(b, 0);
    }
    else if (t == ENTITY_FUNCTION) {
      r = entityFunction(b, 0);
    }
    else if (t == ENTITY_QUERY_GENERATOR) {
      r = entityQueryGenerator(b, 0);
    }
    else if (t == ENTITY_SELECT) {
      r = entitySelect(b, 0);
    }
    else if (t == ENTITY_SELECTOR) {
      r = entitySelector(b, 0);
    }
    else if (t == ENUM_DEFINITION) {
      r = enumDefinition(b, 0);
    }
    else if (t == ENUM_ELEMENT) {
      r = enumElement(b, 0);
    }
    else if (t == FETCH_LIST) {
      r = fetchList(b, 0);
    }
    else if (t == FETCH_ONE) {
      r = fetchOne(b, 0);
    }
    else if (t == FETCH_STREAM) {
      r = fetchStream(b, 0);
    }
    else if (t == FIND_FUNCTION) {
      r = findFunction(b, 0);
    }
    else if (t == FROM_CLAUSE) {
      r = fromClause(b, 0);
    }
    else if (t == FULL_SELECT) {
      r = fullSelect(b, 0);
    }
    else if (t == GROUP_CLAUSE) {
      r = groupClause(b, 0);
    }
    else if (t == HAVING_CLAUSE) {
      r = havingClause(b, 0);
    }
    else if (t == HIERARCHY_CLAUSE) {
      r = hierarchyClause(b, 0);
    }
    else if (t == IN_MODIFIER) {
      r = inModifier(b, 0);
    }
    else if (t == INDEX_FUNCTION) {
      r = indexFunction(b, 0);
    }
    else if (t == IS_DEFAULT) {
      r = isDefault(b, 0);
    }
    else if (t == NAMESCPACE_RECOVER) {
      r = namescpaceRecover(b, 0);
    }
    else if (t == NAMESPACE_SECTION) {
      r = namespaceSection(b, 0);
    }
    else if (t == ORDER_CLAUSE) {
      r = orderClause(b, 0);
    }
    else if (t == OUT_MODIFIER) {
      r = outModifier(b, 0);
    }
    else if (t == PACKAGE_DEFINITION) {
      r = packageDefinition(b, 0);
    }
    else if (t == PREFETCH_STATEMENT) {
      r = prefetchStatement(b, 0);
    }
    else if (t == PRIMARY_KEY_CLAUSE) {
      r = primaryKeyClause(b, 0);
    }
    else if (t == QUALIFIED_NAME) {
      r = qualifiedName(b, 0);
    }
    else if (t == QUERY_GENERATOR) {
      r = queryGenerator(b, 0);
    }
    else if (t == QUERY_PARAMETER) {
      r = queryParameter(b, 0);
    }
    else if (t == QUERY_PARAMETERS_LIST) {
      r = queryParametersList(b, 0);
    }
    else if (t == SCHEMA_RECOVER) {
      r = schemaRecover(b, 0);
    }
    else if (t == SCHEMA_SECTION) {
      r = schemaSection(b, 0);
    }
    else if (t == SELECT_CLAUSE) {
      r = selectClause(b, 0);
    }
    else if (t == SELECT_DERIVED_COLUMN) {
      r = selectDerivedColumn(b, 0);
    }
    else if (t == SELECT_LIST_CLAUSE) {
      r = selectListClause(b, 0);
    }
    else if (t == SELECT_STAR_CLAUSE) {
      r = selectStarClause(b, 0);
    }
    else if (t == SEQUENCE_DEFINITION) {
      r = sequenceDefinition(b, 0);
    }
    else if (t == SEQUENCE_GENERATOR) {
      r = sequenceGenerator(b, 0);
    }
    else if (t == SORT_ORDER) {
      r = sortOrder(b, 0);
    }
    else if (t == SORT_SPECIFICATION) {
      r = sortSpecification(b, 0);
    }
    else if (t == SQL_AND_EXPRESSION) {
      r = sqlAndExpression(b, 0);
    }
    else if (t == SQL_ATOMIC_LIST) {
      r = sqlAtomicList(b, 0);
    }
    else if (t == SQL_BETWEEN_EXPRESSION) {
      r = sqlBetweenExpression(b, 0);
    }
    else if (t == SQL_CALLABLE) {
      r = sqlCallable(b, 0);
    }
    else if (t == SQL_CALLABLE_PARAMETER) {
      r = sqlCallableParameter(b, 0);
    }
    else if (t == SQL_CALLABLE_PARAMETERS_LIST) {
      r = sqlCallableParametersList(b, 0);
    }
    else if (t == SQL_COLUMN_REF_EXPRESSION) {
      r = sqlColumnRefExpression(b, 0);
    }
    else if (t == SQL_COMPARISON_EXPRESSION) {
      r = sqlComparisonExpression(b, 0);
    }
    else if (t == SQL_COMPARISON_OP) {
      r = sqlComparisonOp(b, 0);
    }
    else if (t == SQL_COUNT_FUNCTION_EXPRESSION) {
      r = sqlCountFunctionExpression(b, 0);
    }
    else if (t == SQL_DATE_LITERAL_EXPRESSION) {
      r = sqlDateLiteralExpression(b, 0);
    }
    else if (t == SQL_EXPRESSION) {
      r = sqlExpression(b, 0);
    }
    else if (t == SQL_FUNCTION_CALLABLE) {
      r = sqlFunctionCallable(b, 0);
    }
    else if (t == SQL_FUNCTION_EXPRESSION) {
      r = sqlFunctionExpression(b, 0);
    }
    else if (t == SQL_IN_EXPRESSION) {
      r = sqlInExpression(b, 0);
    }
    else if (t == SQL_INT_LITERAL_EXPRESSION) {
      r = sqlIntLiteralExpression(b, 0);
    }
    else if (t == SQL_MUL_OR_DIV_EXPRESSION) {
      r = sqlMulOrDivExpression(b, 0);
    }
    else if (t == SQL_MUL_OR_DIV_OP) {
      r = sqlMulOrDivOp(b, 0);
    }
    else if (t == SQL_NOT_EXPRESSION) {
      r = sqlNotExpression(b, 0);
    }
    else if (t == SQL_NULL_LITERAL_EXPRESSION) {
      r = sqlNullLiteralExpression(b, 0);
    }
    else if (t == SQL_OR_EXPRESSION) {
      r = sqlOrExpression(b, 0);
    }
    else if (t == SQL_ORA_8_RIGHT_OUTER) {
      r = sqlOra8RightOuter(b, 0);
    }
    else if (t == SQL_PARAMETER_EXPRESSION) {
      r = sqlParameterExpression(b, 0);
    }
    else if (t == SQL_PARANTHESIS_EXPRESSION) {
      r = sqlParanthesisExpression(b, 0);
    }
    else if (t == SQL_PLUS_OR_MINUS_EXPRESSION) {
      r = sqlPlusOrMinusExpression(b, 0);
    }
    else if (t == SQL_PLUS_OR_MINUS_OP) {
      r = sqlPlusOrMinusOp(b, 0);
    }
    else if (t == SQL_PROCEDURE_CALLABLE) {
      r = sqlProcedureCallable(b, 0);
    }
    else if (t == SQL_SIMPLE_COLUMN_REF_EXPRESSION) {
      r = sqlSimpleColumnRefExpression(b, 0);
    }
    else if (t == SQL_STRING_LITERAL_EXPRESSION) {
      r = sqlStringLiteralExpression(b, 0);
    }
    else if (t == SQL_SYS_DATE_LITERAL_EXPRESSION) {
      r = sqlSysDateLiteralExpression(b, 0);
    }
    else if (t == SQL_TYPE) {
      r = sqlType(b, 0);
    }
    else if (t == SUB_SELECT) {
      r = subSelect(b, 0);
    }
    else if (t == TABLE_DEFINITION) {
      r = tableDefinition(b, 0);
    }
    else if (t == TRANS_LAT) {
      r = transLat(b, 0);
    }
    else if (t == TRANS_MODIFIER) {
      r = transModifier(b, 0);
    }
    else if (t == TRANS_ROM) {
      r = transRom(b, 0);
    }
    else if (t == TYPE_MODIFIER) {
      r = typeModifier(b, 0);
    }
    else if (t == VIEW_DEFINITION) {
      r = viewDefinition(b, 0);
    }
    else if (t == WHERE_CLAUSE) {
      r = whereClause(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return datascriptFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(SQL_CALLABLE, SQL_FUNCTION_CALLABLE, SQL_PROCEDURE_CALLABLE),
    create_token_set_(CALL_GENERATOR, CLASS_ELEMENT, ENTITY_QUERY_GENERATOR, QUERY_GENERATOR,
      SEQUENCE_GENERATOR),
    create_token_set_(SQL_AND_EXPRESSION, SQL_BETWEEN_EXPRESSION, SQL_COLUMN_REF_EXPRESSION, SQL_COMPARISON_EXPRESSION,
      SQL_COUNT_FUNCTION_EXPRESSION, SQL_DATE_LITERAL_EXPRESSION, SQL_EXPRESSION, SQL_FUNCTION_EXPRESSION,
      SQL_INT_LITERAL_EXPRESSION, SQL_IN_EXPRESSION, SQL_MUL_OR_DIV_EXPRESSION, SQL_NOT_EXPRESSION,
      SQL_NULL_LITERAL_EXPRESSION, SQL_OR_EXPRESSION, SQL_PARAMETER_EXPRESSION, SQL_PARANTHESIS_EXPRESSION,
      SQL_PLUS_OR_MINUS_EXPRESSION, SQL_SIMPLE_COLUMN_REF_EXPRESSION, SQL_STRING_LITERAL_EXPRESSION, SQL_SYS_DATE_LITERAL_EXPRESSION),
  };

  /* ********************************************************** */
  // AS ID
  public static boolean aliasClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasClause")) return false;
    if (!nextTokenIs(b, AS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, AS, ID);
    exit_section_(b, m, ALIAS_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // ALL | DISTINCT
  public static boolean allDistinct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allDistinct")) return false;
    if (!nextTokenIs(b, "<all distinct>", ALL, DISTINCT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<all distinct>");
    r = consumeToken(b, ALL);
    if (!r) r = consumeToken(b, DISTINCT);
    exit_section_(b, l, m, ALL_DISTINCT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ID '.' '*'
  public static boolean allInGroupQualifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allInGroupQualifier")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && consumeToken(b, DOT);
    r = r && consumeToken(b, MUL);
    exit_section_(b, m, ALL_IN_GROUP_QUALIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // BATCH? (UPDATE|INSERT|DELETE)
  public static boolean batchFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "batchFunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<batch function>");
    r = batchFunction_0(b, l + 1);
    r = r && batchFunction_1(b, l + 1);
    exit_section_(b, l, m, BATCH_FUNCTION, r, false, null);
    return r;
  }

  // BATCH?
  private static boolean batchFunction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "batchFunction_0")) return false;
    consumeToken(b, BATCH);
    return true;
  }

  // UPDATE|INSERT|DELETE
  private static boolean batchFunction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "batchFunction_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, UPDATE);
    if (!r) r = consumeToken(b, INSERT);
    if (!r) r = consumeToken(b, DELETE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CALL qualifiedName callableCardinality?
  public static boolean callGenerator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callGenerator")) return false;
    if (!nextTokenIs(b, CALL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CALL);
    r = r && qualifiedName(b, l + 1);
    r = r && callGenerator_2(b, l + 1);
    exit_section_(b, m, CALL_GENERATOR, r);
    return r;
  }

  // callableCardinality?
  private static boolean callGenerator_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callGenerator_2")) return false;
    callableCardinality(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' INT ']'
  public static boolean callableCardinality(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableCardinality")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && consumeToken(b, INT);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, CALLABLE_CARDINALITY, r);
    return r;
  }

  /* ********************************************************** */
  // CLASS ID '{' classElement* '}'
  public static boolean classDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDefinition")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<class definition>");
    r = consumeTokens(b, 1, CLASS, ID);
    p = r; // pin = 1
    r = r && report_error_(b, consumeToken(b, LBRACE));
    r = p && report_error_(b, classDefinition_3(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, CLASS_DEFINITION, r, p, namescpaceRecover_parser_);
    return r || p;
  }

  // classElement*
  private static boolean classDefinition_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDefinition_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!classElement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classDefinition_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // sequenceGenerator | callGenerator | queryGenerator
  public static boolean classElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classElement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, "<class element>");
    r = sequenceGenerator(b, l + 1);
    if (!r) r = callGenerator(b, l + 1);
    if (!r) r = queryGenerator(b, l + 1);
    exit_section_(b, l, m, CLASS_ELEMENT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ID sqlType typeModifier? transModifier?
  public static boolean column(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && sqlType(b, l + 1);
    r = r && column_2(b, l + 1);
    r = r && column_3(b, l + 1);
    exit_section_(b, m, COLUMN, r);
    return r;
  }

  // typeModifier?
  private static boolean column_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_2")) return false;
    typeModifier(b, l + 1);
    return true;
  }

  // transModifier?
  private static boolean column_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_3")) return false;
    transModifier(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // <<param>> ( ',' <<param>> ) *
  static boolean comma_separated_list(PsiBuilder b, int l, final Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _param.parse(b, l);
    r = r && comma_separated_list_1(b, l + 1, _param);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( ',' <<param>> ) *
  private static boolean comma_separated_list_1(PsiBuilder b, int l, final Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!comma_separated_list_1_0(b, l + 1, _param)) break;
      if (!empty_element_parsed_guard_(b, "comma_separated_list_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' <<param>>
  private static boolean comma_separated_list_1_0(PsiBuilder b, int l, final Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && _param.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONNECT BY NOCYCLE? PRIOR? sqlExpression
  public static boolean connectByCLause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connectByCLause")) return false;
    if (!nextTokenIs(b, CONNECT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CONNECT, BY);
    r = r && connectByCLause_2(b, l + 1);
    r = r && connectByCLause_3(b, l + 1);
    r = r && sqlExpression(b, l + 1);
    exit_section_(b, m, CONNECT_BY_C_LAUSE, r);
    return r;
  }

  // NOCYCLE?
  private static boolean connectByCLause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connectByCLause_2")) return false;
    consumeToken(b, NOCYCLE);
    return true;
  }

  // PRIOR?
  private static boolean connectByCLause_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connectByCLause_3")) return false;
    consumeToken(b, PRIOR);
    return true;
  }

  /* ********************************************************** */
  // USE ID STRING
  public static boolean connection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<connection>");
    r = consumeTokens(b, 1, USE, ID, STRING);
    p = r; // pin = 1
    exit_section_(b, l, m, CONNECTION, r, p, schemaRecover_parser_);
    return r || p;
  }

  /* ********************************************************** */
  // sqlType | ID
  public static boolean dataType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<data type>");
    r = sqlType(b, l + 1);
    if (!r) r = consumeToken(b, ID);
    exit_section_(b, l, m, DATA_TYPE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // namespaceSection | schemaSection
  static boolean datascriptFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datascriptFile")) return false;
    if (!nextTokenIs(b, "", NAMESPACE, SCHEMA)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespaceSection(b, l + 1);
    if (!r) r = schemaSection(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ENTITY qualifiedName '{'
  //         <<comma_separated_list ( entityFunction )>>
  //         entityQueryGenerator*
  //         '}'
  public static boolean entityDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entityDefinition")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<entity definition>");
    r = consumeToken(b, ENTITY);
    p = r; // pin = 1
    r = r && report_error_(b, qualifiedName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LBRACE)) && r;
    r = p && report_error_(b, comma_separated_list(b, l + 1, entityDefinition_3_0_parser_)) && r;
    r = p && report_error_(b, entityDefinition_4(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, ENTITY_DEFINITION, r, p, namescpaceRecover_parser_);
    return r || p;
  }

  // ( entityFunction )
  private static boolean entityDefinition_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entityDefinition_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = entityFunction(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
